// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultsController GET /v2/harvests error cases returns a 400 for invalide chain 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v2/harvests success cases Return extended harvest for chain vaults 1`] = `
Object {
  "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28": Array [],
}
`;

exports[`VaultsController GET /v2/harvests/:vault error cases returns a 400 for invalide chain 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v2/harvests/:vault success cases Return extended harvests for chain vault by addr 1`] = `Array []`;

exports[`VaultsController GET /v2/vaults with a specified chain returns the vaults for bsc 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 20,
      "strategistFee": 0,
      "withdrawFee": 50,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 8.484984091523238,
      "harvestApy": 8.484984091523238,
      "harvestPeriodApr": 8.26,
      "harvestPeriodApy": 8.26,
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestValue": 12510,
      "yieldApr": 8.484984091523238,
      "yieldPeriodApr": 8.26,
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`VaultsController GET /v2/vaults with a specified chain returns the vaults for eth 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 20,
      "strategistFee": 0,
      "withdrawFee": 50,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 8.484984091523238,
      "harvestApy": 8.484984091523238,
      "harvestPeriodApr": 8.26,
      "harvestPeriodApy": 8.26,
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestValue": 12510,
      "yieldApr": 8.484984091523238,
      "yieldPeriodApr": 8.26,
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`VaultsController GET /v2/vaults with an invalid specified chain returns a 400 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v2/vaults with no specified chain returns eth vaults 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 20,
      "strategistFee": 0,
      "withdrawFee": 50,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 8.484984091523238,
      "harvestApy": 8.484984091523238,
      "harvestPeriodApr": 8.26,
      "harvestPeriodApy": 8.26,
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestValue": 12510,
      "yieldApr": 8.484984091523238,
      "yieldPeriodApr": 8.26,
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`VaultsController GET /v3/vaults/harvests error cases returns a 400 for invalide chain 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v3/vaults/harvests success cases Return extended harvests for chain vault by addr 1`] = `Array []`;

exports[`VaultsController GET /v3/vaults/list with a specified chain returns the vaults for eth 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 20,
      "strategistFee": 0,
      "withdrawFee": 50,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 8.484984091523238,
      "harvestApy": 8.484984091523238,
      "harvestPeriodApr": 8.26,
      "harvestPeriodApy": 8.26,
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestValue": 12510,
      "yieldApr": 8.484984091523238,
      "yieldPeriodApr": 8.26,
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`VaultsController GET /v3/vaults/list with a specified chain returns the vaults for polygon 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 20,
      "strategistFee": 0,
      "withdrawFee": 50,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 8.484984091523238,
      "harvestApy": 8.484984091523238,
      "harvestPeriodApr": 8.26,
      "harvestPeriodApy": 8.26,
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestValue": 12510,
      "yieldApr": 8.484984091523238,
      "yieldPeriodApr": 8.26,
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`VaultsController GET /v3/vaults/list with an invalid specified chain returns a 400 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v3/vaults/list with no specified chain returns eth vaults 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 20,
      "strategistFee": 0,
      "withdrawFee": 50,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 8.484984091523238,
      "harvestApy": 8.484984091523238,
      "harvestPeriodApr": 8.26,
      "harvestPeriodApy": 8.26,
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestValue": 12510,
      "yieldApr": 8.484984091523238,
      "yieldPeriodApr": 8.26,
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`VaultsController GET /v3/vaults/list/harvests error cases returns a 400 for invalide chain 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v3/vaults/list/harvests success cases Return extended harvest for chain vaults 1`] = `
Object {
  "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28": Array [],
}
`;

exports[`VaultsController GET /v3/vaults/snapshots error cases returns a 400 for invalide chain 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v3/vaults/snapshots error cases returns a 400 for invalide timestamps 1`] = `
Object {
  "code": 1000,
  "message": "Query param timestamps invalid",
}
`;

exports[`VaultsController GET /v3/vaults/snapshots error cases returns a 400 for missed vault address param 1`] = `
Object {
  "code": 1000,
  "message": "Query param vaultAddr invalid",
}
`;

exports[`VaultsController GET /v3/vaults/snapshots success cases return 200 and vaults snapshots for all dates, without duplications 1`] = `
Array [
  Object {
    "address": "0x4591890225394BF66044347653e112621AF7DDeb",
    "available": 0.8441047101358636,
    "balance": 1313.2024161551205,
    "id": "0x4591890225394BF66044347653e112621AF7DDeb_arbitrum",
    "pricePerFullShare": 1.0318408019214105,
    "ratio": 1.0318408019214105,
    "timestamp": 1645103004000,
    "value": 2032359.1094,
  },
  Object {
    "address": "0x4591890225394BF66044347653e112621AF7DDeb",
    "available": 0,
    "balance": 1312.1235049307659,
    "id": "0x4591890225394BF66044347653e112621AF7DDeb_arbitrum",
    "pricePerFullShare": 1.0316911107514206,
    "ratio": 1.0316911107514206,
    "timestamp": 1645015261000,
    "value": 2061137.5997,
  },
  Object {
    "address": "0x4591890225394BF66044347653e112621AF7DDeb",
    "available": 0.09301841726863323,
    "balance": 1331.85239374146,
    "id": "0x4591890225394BF66044347653e112621AF7DDeb_arbitrum",
    "pricePerFullShare": 1.0315443246375726,
    "ratio": 1.0315443246375726,
    "timestamp": 1644928124000,
    "value": 2087438.8599,
  },
]
`;

exports[`VaultsController GET /v3/vaults/snapshots success cases return 200 with 1 relevant vault and 2 old snapshots 1`] = `
Array [
  Object {
    "address": "0x4591890225394BF66044347653e112621AF7DDeb",
    "available": 0.8441047101358636,
    "balance": 1313.2024161551205,
    "id": "0x4591890225394BF66044347653e112621AF7DDeb_arbitrum",
    "pricePerFullShare": 1.0318408019214105,
    "ratio": 1.0318408019214105,
    "timestamp": 1634821933000,
    "value": 2032359.1094,
  },
  Object {
    "address": "0x4591890225394BF66044347653e112621AF7DDeb",
    "available": 0,
    "balance": 1306.3528590407586,
    "id": "0x4591890225394BF66044347653e112621AF7DDeb_arbitrum",
    "pricePerFullShare": 1.031977892102678,
    "ratio": 1.031977892102678,
    "timestamp": 1634821931000,
    "value": 1945766.2918,
  },
]
`;

exports[`VaultsController GET /v3/vaults/snapshots success cases return 200 with empty array, got unmached data 1`] = `Array []`;
